@@ -13,3 +13,5 @@ Solution hiniting is now a parameter. Impact factor 0.8
 Solution hiniting Impact factor 0.7
 maxcuts impact factor 0.7
 --- 27 dec full ---
+Don't update scores for the first instance.
+Force attempt all values till count 5 in parameters
